fix spacing around resized icons

--- a/proto/css/src/_hack.ektron.less
+++ b/proto/css/src/_hack.ektron.less
@@ -60,6 +60,18 @@ main footer { background-color: transparent; }
 // TODO: choose a more appropriate name
 .c-BigAssIcon {
   transform: scale(16 / 10);
+  &.c-Stat__Icon + p {
+    padding-top: 1.5rem;
+    padding-top: var(--lh);
+    padding-block-start: var(--lh);
+    padding-block-start: lh;
+  }
+  &.c-Portal__Icon + .c-Portal__Hn {
+    padding-top: 3rem;
+    padding-top: calc(2 ~'*' var(--lh));
+    padding-block-start: calc(2 ~'*' var(--lh));
+    padding-block-start: 2lh;
+  }
 }
 
 
